--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ RSS: false
 #weibo_username:    raingather 
 #zhihu_username:    raingather
 github_username: raingather
+email: 1809523092@qq.com
 #twitter_username:  raingather 
 #facebook_username: raingather 
 #linkedin_username:  firstname-lastname-idxxxx
