[GCI] [UPDATE] add bilibili link

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ RSS: false
 #zhihu_username:    raingather
 github_username: raingather
 email: 1809523092@qq.com
+bilibili_uid: 72312661
 #twitter_username:  raingather 
 #facebook_username: raingather 
 #linkedin_username:  firstname-lastname-idxxxx
