--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ RSS: false
 github_username: raingather
 email: 1809523092@qq.com
 bilibili_uid: 72312661
+wechat_mp: /assets/wechat_mp_qrcode.jpg
 #twitter_username:  raingather 
 #facebook_username: raingather 
 #linkedin_username:  firstname-lastname-idxxxx
